--- a/Views/Calculadora/Resultado.cshtml
+++ b/Views/Calculadora/Resultado.cshtml
@@ -3,4 +3,4 @@
 }
 
 <h1>@ViewBag.Titulo</h1>
-<p>@ViewBag.Resultado</p>
+<p>O resultado entre @ViewBag.N1 @ViewBag.Operacao @ViewBag.N2 é @ViewBag.Resultado</p>
